--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,59 @@
     padding: 0;
 }
 
+/*-------------
+    GENERAL
+--------------*/
+
+.container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*-------------
+    HEADER
+--------------*/
+
+/*-------------
+    HEADER TOP
+--------------*/
+
+.header-top {
+    background-color: #add8e6;
+    padding: 15px 0;
+}
+
+.header-top>.container {
+    display: flex;
+    background-color: #daa520;
+}
+
+.logo {
+    text-align: left;
+    width: 20%;
+}
+
+nav {
+    width: 60%;
+    text-align: center;
+}
+
+.login {
+    text-align: right;
+    width: 20%;
+}
+
+.header-top>.container>* {
+    border: 1px dashed black;
+    padding: 10px;
+}
+
+/*------------------
+    HEADER BOTTOM
+-------------------*/
+
+.header-bottom {
+    background-color: #00008b;
+    padding: 30px 0;
+}
