--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,13 @@ nav {
     background-color: #00008b;
     padding: 30px 0;
 }
+
+.hero {
+    display: flex;
+    max-width: 900px;
+    min-height: 400px;
+    background-color: #ee82ee;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px dashed black
+}
