--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ nav {
 
 .header-bottom {
     background-color: #00008b;
-    padding: 30px 0;
+    padding: 50px 0;
 }
 
 .hero {
@@ -73,4 +73,31 @@ nav {
     margin-left: auto;
     margin-right: auto;
     border: 1px dashed black
+}
+
+/*-------------
+    MAIN
+------------*/
+
+/*-------------------------
+    MAIN'S DOUBLE COLUMNS
+---------------------------*/
+
+.columns {
+    display: flex;
+    margin: 50px 0;
+}
+
+.col-big {
+    background-color: #1e90ff;
+    width: 60%;
+    border: 1px dashed black;
+    height: 500px;
+}
+
+.col-small {
+    background-color: #ffc0cb;
+    width: 40%;
+    border: 1px dashed black;
+    height: 500px;
 }
