--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ nav {
 }
 
 .header-top>.container>* {
-    border: 1px dashed black;
+    border: 2px dashed black;
     padding: 10px;
 }
 
@@ -72,7 +72,7 @@ nav {
     background-color: #ee82ee;
     margin-left: auto;
     margin-right: auto;
-    border: 1px dashed black
+    border: 2px dashed black
 }
 
 /*-------------
@@ -90,14 +90,14 @@ nav {
 .col-big {
     background-color: #1e90ff;
     width: 720px;
-    border: 1px dashed black;
+    border: 2px dashed black;
     height: 500px;
 }
 
 .col-small {
     background-color: #ffc0cb;
     width: 480px;
-    border: 1px dashed black;
+    border: 2px dashed black;
     height: 500px;
 }
 
@@ -122,4 +122,37 @@ nav {
     width: 100%;
     height: 900px;
     background-color: #228b22;
+    border: 2px dashed black;
+}
+
+/*-------------
+    FOOTER
+--------------*/
+
+/*-------------
+    FOOTER TOP
+--------------*/
+
+.footer-top>.container {
+    display: flex;
+}
+
+.footer-top {
+    background-color: #23272a;
+    padding-top: 10px;
+    padding-bottom: 40px;
+}
+
+.col-pink {
+    background-color: #f08080;
+    width: 40%;
+    height: 580px;
+    border: 2px dashed black;
+}
+
+.col-aqua {
+    background-color: #20b2aa;
+    width: 15%;
+    height: 580px;
+    border: 2px dashed white;
 }
